Created RHV conversion hosts section. QA changes

--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_other_storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_other_storage.adoc
@@ -21,9 +21,9 @@ Red Hat Virtualization supports 1500 logical volumes per block-based storage dom
 
 See:
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_iSCSI_Storage1[Adding iSCSI Storage] in the _Administration Guide_.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_iSCSI_Storage1[Adding iSCSI Storage] in the Red Hat Virtualization _Administration Guide_.
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_ for general information.
+* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the Red Hat Enterprise Linux _Storage Administration Guide_ for general information.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -37,9 +37,9 @@ Red Hat Virtualization supports 1500 logical volumes per block-based storage dom
 
 See:
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_FCP_Storage[Adding FCP Storage] in the _Administration Guide_.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Adding_FCP_Storage[Adding FCP Storage] in the Red Hat Virtualization _Administration Guide_.
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_ for general information.
+* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the Red Hat Enterprise Linux _Storage Administration Guide_ for general information.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -47,15 +47,15 @@ include::ref_Storage_to_CF_link.adoc[]
 [discrete]
 == Fibre Channel over Ethernet
 
-To use Fibre Channel over Ethernet (FCoE) in Red Hat Virtualization, you must enable the *fcoe* key on the Manager, and install the _vdsm-hook-fcoe_ package on the hosts. 
+To use Fibre Channel over Ethernet (FCoE) in Red Hat Virtualization, you must enable the *fcoe* key on the Manager, and install the _vdsm-hook-fcoe_ package on the hosts.
 
 Red Hat Virtualization supports 1500 logical volumes per block-based storage domain. No more than 300 LUNs are permitted.
 
 See:
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#How_to_Set_Up_RHVM_to_Use_FCoE[How to Set Up Red Hat Virtualization Manager to Use FCoE] in the _Administration Guide_.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#How_to_Set_Up_RHVM_to_Use_FCoE[How to Set Up Red Hat Virtualization Manager to Use FCoE] in the Red Hat Virtualization _Administration Guide_.
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the _Red Hat Enterprise Linux Storage Administration Guide_ for general information.
+* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/ch24.html[Online Storage Management] in the Red Hat Enterprise Linux _Storage Administration Guide_ for general information.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -69,7 +69,7 @@ Red Hat Gluster Storage should be utilized over 10 GbE and segregated with VLANs
 
 Check the compatibility matrix in link:https://access.redhat.com/articles/2356261[] before using RHGS with Red Hat Virtualization.
 
-See: 
+See:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_gluster_storage/3.2/html/configuring_red_hat_virtualization_with_red_hat_gluster_storage/[_Configuring Red Hat Virtualization with Red Hat Gluster Storage_]
 
@@ -81,9 +81,9 @@ include::ref_Storage_to_CF_link.adoc[]
 [discrete]
 == Red Hat Ceph File System
 
-Red Hat Ceph File System (CephFS) is a file system compatible with POSIX standards that uses a Ceph Storage Cluster to store its data. No special configuration is required on the Red Hat Virtualization side when adding CephFS as a storage domain. It is added the same way as any other POSIX-compliant FS storage. 
+Red Hat Ceph File System (CephFS) is a file system compatible with POSIX standards that uses a Ceph Storage Cluster to store its data. No special configuration is required on the Red Hat Virtualization side when adding CephFS as a storage domain. It is added the same way as any other POSIX-compliant FS storage.
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the _Administration Guide_.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the Red Hat Virtualization _Administration Guide_.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -91,13 +91,13 @@ include::ref_Storage_to_CF_link.adoc[]
 [discrete]
 == POSIX-Compliant FS
 
-Other POSIX-compliant file systems can be used as storage domains in Red Hat Virtualization, as long as they are clustered file systems, such as Red Hat Global File System 2 (GFS2), and support sparse files and direct I/O. The Common Internet File System (CIFS), for example, does not support direct I/O, making it incompatible with Red Hat Virtualization. 
+Other POSIX-compliant file systems can be used as storage domains in Red Hat Virtualization, as long as they are clustered file systems, such as Red Hat Global File System 2 (GFS2), and support sparse files and direct I/O. The Common Internet File System (CIFS), for example, does not support direct I/O, making it incompatible with Red Hat Virtualization.
 
 See:
 
 * link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Global_File_System_2/index.html[_Red Hat Enterprise Linux Global File System 2_]
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the _Administration Guide_.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_POSIX_Compliant_File_System_Storage[Adding POSIX Compliant File System Storage] in the Red Hat Virtualization _Administration Guide_.
 
 include::ref_Storage_to_CF_link.adoc[]
 
@@ -107,9 +107,8 @@ include::ref_Storage_to_CF_link.adoc[]
 
 Local storage is set up on an individual host, using the host's own resources. When you set up a host to use local storage, it is automatically added to a new data center and cluster that no other hosts can be added to. Virtual machines created in a single-host cluster cannot be migrated, fenced, or scheduled.
 
-For Red Hat Virtualization Hosts, local storage should always be defined on a file system that is separate from / (root). Red Hat recommends using a separate logical volume or disk. 
+For Red Hat Virtualization Hosts, local storage should always be defined on a file system that is separate from / (root). Red Hat recommends using a separate logical volume or disk.
 
-See: link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_Local_Storage[Preparing and Adding Local Storage] in the _Administration Guide_.
+See: link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_Local_Storage[Preparing and Adding Local Storage] in the Red Hat Virtualization _Administration Guide_.
 
 include::ref_Storage_to_CF_link.adoc[]
-
