--- a/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
@@ -4,9 +4,8 @@
 Authenticate the Manager so that CloudForms can connect to it:
 
 . Go to menu:Compute[Infrastructure > Providers].
-. In the *Credentials* area, under *Default*, enter the user name (formatted as `admin@internal`) in the *Username* field.
-. Enter the password in the *Password* field.
-. Confirm the password in the *Confirm Password* field.
+. In the *Credentials* area, under *Default*, enter the *Username* (formatted as `admin@internal`).
+. Enter and confirm the *Password*.
 . Click *Validate*.
 . Click *Add*.
 
@@ -23,4 +22,3 @@ You can select all hosts using the *Check All* option.
 . In the *Credentials* area, enter the *Default* credentials. This field is mandatory. Users should have privileged access such as `root` or `administrator`.
 . Click *Validate*.
 . Click *Add*.
-
