--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -4,7 +4,7 @@
 [discrete]
 == Prerequisite for Large Migration
 
-If you are migrating a large number of virtual machines, create a CSV file specifying the virtual machine names (mandatory) and provider (optional), in the following format:
+If you are migrating a large number of virtual machines, create a CSV file specifying the virtual machine names (mandatory) and provider (optional, for differentiating virtual machines with identical names), in the following format:
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Name, Provider
@@ -43,9 +43,9 @@ Create and run a migration plan:
 
 . Select *Start Migration Immediately* and click *Create*.
 
-. Click *Close*. The migration plan may take some time to complete. "In Progress Plans", the status of the datastores and VMs, and the elapsed time are displayed.
+. Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the status of the datastores and VMs, and the elapsed time are displayed.
 +
-When the migration is complete, a "Completed Migrations" message is displayed, with the number of successfully migrated virtual machines.
+When the migration is complete, *Completed Migrations* is displayed, with the number of successfully migrated virtual machines.
 
 If a migration plan does not complete successfully, check the log:
 
