--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_CloudForms_manually(refonly).adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_CloudForms_manually(refonly).adoc
@@ -1,7 +1,5 @@
 [[Installing_CloudForms]]
-= Installing CloudForms
-
-*(%AP: This section will be replaced by the Ansible installation instructions.)*
+= Installing CloudForms (Manual procedure, not part of v2v)
 
 The procedure for installing CloudForms on your Red Hat Virtualization system has 3 key stages:
 
@@ -34,7 +32,7 @@ Upload the QCOW2 CloudForms appliance to the data storage domain of your Manager
 
 . Log into the Administration Portal.
 . Click menu:Storage[Disks].
-. Select *Start* from the *Upload* menu. 
+. Select *Start* from the *Upload* menu.
 . Click *Choose File* and select the appliance to upload.
 . Click *OK*.
 +
@@ -77,7 +75,6 @@ image:5780.png[]
 . Set the *Allocation Policy* to `Preallocated` (thick provisioning) for best performance.
 . Specify any other values as desired.
 . Click *OK* to create the disk.
-. To start the CloudForms appliance, select the virtual machine from the *Virtual Machines* tab and click image:greentriangle.png[] (*Run*). 
+. To start the CloudForms appliance, select the virtual machine from the *Virtual Machines* tab and click image:greentriangle.png[] (*Run*).
 
 Your Red Hat Virtualization environment now contains a running CloudForms virtual machine.
-
