--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
@@ -138,7 +138,7 @@ Please note: Data Warehouse is required for the engine. If you choose to not con
 Configure Data Warehouse on this host (Yes, No) [Yes]:
 ----
 
-. Press `Enter` to allow access to a virtual machines's serial console from the command line:
+. Press `Enter` to allow access to a virtual machine's serial console from the command line:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
