--- a/doc-V2V_Guide/cfme/doc/modules/ref_Storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Storage.adoc
@@ -5,7 +5,7 @@ You must attach at least one storage domain to each data center. Setting up stor
 
 [IMPORTANT]
 ====
-Red Hat Virtualization currently does not support storage with a block size of 4K. You must configure block storage in legacy (512b block) mode. 
+Red Hat Virtualization currently does not support storage with a block size of 4K. You must configure block storage in legacy (512b block) mode.
 ====
 
 This document describes how to add NFS storage. For other storage types, click the link for documentation:
@@ -21,10 +21,9 @@ This document describes how to add NFS storage. For other storage types, click t
 
 For more information about storage, see:
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/administration_guide/chap-storage[Storage] in the _Administration Guide_.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html/administration_guide/chap-storage[Storage] in the Red Hat Virtualization _Administration Guide_.
 
-* link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/index.html[_Red Hat Enterprise Linux Storage Administration Guide_].
+* Red Hat Enterprise Linux  link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/index.html[_Storage Administration Guide_].
 
 include::proc_Adding_NFS_Storage.adoc[leveloffset=+1]
 include::proc_Adding_other_storage.adoc[leveloffset=+1]
-
