--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -14,8 +14,9 @@ include::common/attributes/cfme.adoc[]
 
 :numbered:
 include::doc/con_Introduction.adoc[leveloffset=+1]
-include::doc/asm_Installation.adoc[leveloffset=+1]
-include::doc/asm_Discovery.adoc[leveloffset=+1]
-include::doc/asm_Planning.adoc[leveloffset=+1]
-include::doc/asm_Migration.adoc[leveloffset=+1]
-include::doc/asm_Post-migration.adoc[leveloffset=+1]
+include::doc/assembly_Installation.adoc[leveloffset=+1]
+include::doc/assembly_Discovery.adoc[leveloffset=+1]
+include::doc/assembly_Planning.adoc[leveloffset=+1]
+include::doc/assembly_Migration.adoc[leveloffset=+1]
+include::doc/assembly_Post-migration.adoc[leveloffset=+1]
+include::doc/assembly_Trouble-shooting.adoc[leveloffset=+1]
