--- a/doc-V2V_Guide/cfme/doc/modules/proc_Logging_in_to_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Logging_in_to_CloudForms.adoc
@@ -2,23 +2,14 @@
 [discrete]
 = Logging in to CloudForms
 
-Once CloudForms is installed, you can log in and perform administration tasks.
+After CloudForms is installed, you can log in and perform administration tasks:
 
-Log in to CloudForms after installation:
-
-.  In a browser, go to `https://_CloudForms_FQDN_` for the welcome screen.
-.  Enter the default credentials (Username: *admin* | Password: *smartvm*) for the initial login.
-.  Click *Login*.
-
-[discrete]
-= Changing CloudForms Password
-
-Change your password for security:
-
-. Log out of CloudForms, to go to the welcome screen.
+. In a browser, go to +https://_CloudForms_FQDN_+ for the welcome screen.
+. Enter the default credentials (Username: *admin* | Password: *smartvm*) for the initial login.
+. Click *Login*.
+. Click menu:Administrator | EVM[Logout] to log out of CloudForms so that you can change the default password.
 . Click *Update Password* beneath the *Username* and *Password* text fields.
 . Enter your current *Username* and *Password* in the text fields.
 . Enter a new password in the *New Password* field.
 . Repeat your new password in the *Verify Password* field.
 . Click *Login*.
-
