--- a/doc-V2V_Guide/cfme/doc/assembly_Trouble-shooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Trouble-shooting.adoc
@@ -5,6 +5,12 @@ Failed migrations
 
 Log files
 
+If a migration plan does not complete successfully, check the log:
+
+. Select *Completed Plans* from the migration plan drop-down list.
+. Click the unsuccessful plan to open the details view.
+. Click *Download Log* to download the migration log.
+
 Common issues/mistakes
 
 https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/01-redhat_solutions-insfrastructure_migration_v2-troubleshooting.adoc
