--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
@@ -1,6 +1,8 @@
 [id="proc_Configuring_rhv_conversion_hosts"]
 = Configuring RHV Conversion Hosts
 
+Create one or more RHV conversion hosts.
+
 [discrete]
 == Prerequisites
 
