--- a/doc-V2V_Guide/cfme/doc/assembly_Post-migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Post-migration.adoc
@@ -3,23 +3,4 @@
 
 *(%AP: How many of these tasks can be automated? If so, refer from Planning > Creating Playbooks)*
 
-Miscellaneous tasks after you've completed migration. Tying up loose ends, fixing stuff that didn't work.
-
-Checking for incomplete migrations (UI or log?)
-
-Checking and reporting status of completed migrations
-
-Finding migrated workloads
-
-Viewing your migration history
-
-Recovering failed migrations
-
-Restoring to original state
-
-Retrying failed migrations
-
-Reversing successful migrations
-
-Trouble-shooting info: https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/01-redhat_solutions-insfrastructure_migration_v2-troubleshooting.adoc
-
+*(%AP: Are there any post-migration tasks?)*
