added RHV install update

--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -7,7 +7,7 @@ Installing {product-title} on Red Hat Virtualization consists of the following s
 . Uploading the appliance image to the Red Hat Virtualization data storage domain.
 . Creating a virtual machine based on the appliance.
 
-After you have completed all the procedures in this chapter, you will have a working environment which you can further configure and customize.
+After completing all the procedures in this chapter, you will have a working environment which you can further configure and customize.
 
 .Requirements
 
