updated conversion playbook section

--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
@@ -10,6 +10,8 @@ Create one or more RHV conversion hosts.
 
 . Using SCP, copy the VDDK package to the Manager machine.
 
+. Generate an SSH key for the Manager machine and copy it to each conversion host.
+
 [discrete]
 == Procedure
 
