--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
@@ -10,9 +10,9 @@ After installing CloudForms and running it for the first time, configure the int
 ----
 
 . Press *Enter* to manually configure settings.
-. Select `5) Configure Database` from the menu.
-. Select `1) Create key`.
-. Select `1) Create Internal Database` for the database location.
+. Select *Configure Database* from the menu.
+. Select *Create key*.
+. Select *Create Internal Database* for the database location.
 . Choose a disk for the database. This can be either a disk you attached previously, or a partition on the current disk.
 +
 [IMPORTANT]
