--- a/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,49 +1,24 @@
 [[Planning]]
 = Planning
 
-A well-planned migration is critical for success. TBD
+A well-planned migration is critical for success. During the planning process, you should focus on the following tasks:
 
-The planning process has x key stages:
+* Create playbooks to automate pre-migration tasks.
+* Create migration groups, taking the following into consideration:
 
-* Create playbooks for pre- and post-migration tasks.
-* Create migration groups.
-* Create a schedule.
+** How are the virtual machines grouped?
+** Which virtual machines should be migrated together?
+** What workloads should be migrated together?
+** What applications must remain available?
 
-== Creating Playbooks for Pre- and Post-migration Tasks
+* Schedule your migration, to minimize the impact on your users.
 
-Create Ansible playbooks for pre-migration tasks:
+[discrete]
+== Best Practices
 
-* Task 1
-* Task 2
-
-== Creating Migration Groups
-
-Virtual Machines:
-
-* How are the virtual machines grouped?
-* Which virtual machines should be migrated together?
-
-Workloads:
-
-* What workloads need to migrate together?
-* What applications must remain available?
-
-Best practices:
-
-* Keep linked applications together and migrate at the same time
-* Move critical applications during maintenance windows
-* Plan for redundancy
-* Stagger migration schedules
-
-== Creating a Schedule
-
-* How do I schedule the migration?
-* What downtime can I anticipate?
-
-Best Practices:
-
-* Prepare users for downtime
-* Minimize impact on your environment 
-** Throttling
-** Scheduling
-
+* Keep linked applications together and migrate at the same time.
+* Move critical applications during maintenance windows.
+* Plan for redundancy.
+* Stagger migration schedules.
+* Prepare your users for downtime.
+* Minimize the impact on your environment, possibly by throttling bandwidth usage.
