--- a/doc-V2V_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,9 +1,13 @@
-[id='assembly_Trouble-shooting']
-= Trouble-shooting
+[id='assembly_Troubleshooting']
+= Troubleshooting
 
-Failed migrations
+[discrete]
+== Failed Migrations
 
-Log files
+*(%AP: What do they do?)*
+
+[discrete]
+== Log Files
 
 If a migration plan does not complete successfully, check the log:
 
@@ -11,6 +15,7 @@ If a migration plan does not complete successfully, check the log:
 . Click the unsuccessful plan to open the details view.
 . Click *Download Log* to download the migration log.
 
-Common issues/mistakes
+[discrete]
+== Common Issues and Mistakes
 
 https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/01-redhat_solutions-insfrastructure_migration_v2-troubleshooting.adoc
