--- a/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
@@ -18,10 +18,9 @@ The infrastructure migration is performed with Red Hat CloudForms. CloudForms is
 The infrastructure migration has 5 key stages:
 
 * Installation: Installing and configuring RHV Manager, Red Hat Virtualization Hosts, and Red Hat CloudForms.
-* Discovery: Discovering the VMware and RHV infrastructure providers and resources
-* Planning: Planning for Migration
-* Migration: Creating an infrastructure mapping, creating and running a migration plan
-* Post-migration: ??? *(%AP: Are there any post-migration tasks?)*
-* Trouble-shooting: Failed migrations, log files, common issues or mistakes
+* Discovery: Discovering the VMware and RHV infrastructure providers and resources.
+* Planning: Planning for Migration.
+* Migration: Creating an infrastructure mapping, creating and running a migration plan.
+* Troubleshooting: Failed migrations, log files, common issues or mistakes.
 
 *(%AP: How long will migration take for x number of VMs? How many machines do they need?)*
