--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
@@ -10,10 +10,10 @@ After installing CloudForms and running it for the first time, configure the int
 ----
 
 . Press *Enter* to manually configure settings.
-. Select *Configure Database* from the menu.
-. Select *Create key*.
-. Select *Create Internal Database* for the database location.
-. Choose a disk for the database. This can be either a disk you attached previously, or a partition on the current disk.
+. Select *Configure Database* from the menu and press *Enter*.
+. Select *Create key* and press *Enter*.
+. Select *Create Internal Database* for the database location and press *Enter*.
+. Choose a disk for the database and press *Enter*. This can be either a disk you attached previously, or a partition on the current disk.
 +
 [IMPORTANT]
 ====
@@ -21,17 +21,15 @@ Red Hat recommends using a separate disk for the database.
 ====
 +
 If there is an unpartitioned disk attached to the virtual machine, the dialog will show options similar to the following:
-+
-----
-1) /dev/vdb: 20480
-2) Don't partition the disk
-----
 
-. Select `1` to choose `/dev/vdb` for the database location.
+* `/dev/vdb: 20480`
+* Don't partition the disk
+
+. Select */dev/vdb* for the database location and press *Enter*.
 +
 This option creates a logical volume using this device and mounts the volume to the appliance in a location appropriate for storing the database. The default location is `/var/opt/rh/rh-postgresql95/lib/pgsql`, which can be found in the environment variable `$APPLIANCE_PG_MOUNT_POINT`.
 
-. Enter `Y` for *Should this appliance run as a standalone database server?*
+. Enter `Y` to select *Should this appliance run as a standalone database server?*
 . Create and confirm a password for the database.
 
 CloudForms configures its internal database.
