--- a/doc-V2V_Guide/cfme/doc/modules/ref_Storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Storage.adoc
@@ -8,7 +8,9 @@ You must attach at least one storage domain to each data center. Setting up stor
 Red Hat Virtualization currently does not support storage with a block size of 4K. You must configure block storage in legacy (512b block) mode.
 ====
 
-This document describes how to add NFS storage. For other storage types, click the link for documentation:
+This guide describes how to add xref:Adding_NFS_Storage[NFS storage].
+
+For other storage types, click the link for documentation:
 
 * xref:Adding_NFS_Storage[NFS]
 * xref:iSCSI[iSCSI]
