--- a/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
@@ -4,12 +4,11 @@
 Discover your infrastructure providers in a defined subnet range:
 
 . Go to menu:Compute[Infrastructure > Providers].
-. Click image:1847.png[Configuration] (*Configuration*) and click image:1942.png[Discover Infrastructure Providers] (*Discover Infrastructure Providers*). 
+. Click image:1847.png[Configuration] (*Configuration*) and click image:1942.png[Discover Infrastructure Providers] (*Discover Infrastructure Providers*).
 . Select *VMware vCenter* and *Red Hat Virtualization* as the infrastructure providers to discover.
 . Enter a *Subnet Range* of IP addresses starting with a *From Address* and ending with a *To Address*.
 . Click *Start*.
 +
-The appliance searches for infrastructure providers in the specified subnet range and adds them to the user interface. 
+The appliance searches for infrastructure providers in the specified subnet range and adds them to the user interface.
 
-To manage the providers you have discovered, you must edit each provider and specify authentication details.
-
+After discovering the infrastructure providers, you must authenticate the Red Hat Virtualization Manager and hosts so that CloudForms can communicate with them.
